Testy zad 1 i 2